# AfterTalk

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  启动 AfterTalk.bat
resource/skill/: example.md  glossary.md  skill.md
src/audio/: recorder.py
src/config/: paths.py
src/gui/: __init__.py  ui_function.py  ui_main.py  ui_main.ui  ui_mainwindow.py
src/llm/: llm_client.py  prompt.py
src/utils/: logger.py  word_writer.py
src/whisper/: whisper.py
