[project]
name = "meeting-minutes-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pywhispercpp>=1.5.0",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
]
